--- a/templates/form.html
+++ b/templates/form.html
@@ -97,8 +97,8 @@
                                         <label class="label-radio" for="meal-type">Snacks</label> 
                                     </div>
                                     <div class="d-flex">
-                                        <input class="form-radio" type="radio" name="meal-type" value="Beverages" required>
-                                        <label class="label-radio" for="meal-type">Beverages</label>   
+                                        <input class="form-radio" type="radio" name="meal-type" value="Drinks" required>
+                                        <label class="label-radio" for="meal-type">Drinks</label>   
                                     </div>
                                 </div>
                             </div>
