--- a/templates/home.html
+++ b/templates/home.html
@@ -38,10 +38,10 @@
                     <a href="{% url 'profile' %}">
                         <img class="nav-profile" src="{% static 'images/no-profile.jpg' %}" alt="profile-pic">
                     </a>
-                    <p class="nav-name">First Name Last Name</p>
+                    <p class="nav-name">{{ name }}</p>
                     <a class="active nav-links" href="{% url 'home' %}">Home</a>
                     <a class="nav-links" href="{% url 'about' %}">About</a>
-                    <button class="nav-links" type="button">Logout</button>
+                    <a class="nav-links" href="{% url 'logout' %}">Logout</a>
                 </div>
             </div>
         </div>
@@ -53,9 +53,10 @@
             <div class="d-flex align-items-center" style="gap: 30px;">
                 <a class="active nav-links" href="{% url 'home' %}">Home</a>
                 <a class="nav-links" href="{% url 'about' %}">About</a>
-                <button class="nav-links" type="button">Logout</button>
-                <a href="{% url 'profile' %}" target="_blank" rel="noopener noreferrer">
+                <a class="nav-links" href="{% url 'logout' %}">Logout</a>
+                <a class="profile" href="{% url 'profile' %}" target="_blank" rel="noopener noreferrer">
                     <img class="nav-profile" src="{% static 'images/no-profile.jpg' %}" alt="profile-pic">
+                    <span class="profile-text">{{ name }}</span>
                 </a>
             </div>
         </div>
