--- a/static/register.css
+++ b/static/register.css
@@ -46,7 +46,7 @@
         display: block;
         margin: 0 auto;
         position: relative;
-        bottom: 50px;
+        bottom: 30px;
     }
 
 }
@@ -174,4 +174,44 @@
     position: relative;
     left: 55%;
     bottom: 76px
+}
+
+#messages {
+    position: fixed;
+    top: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    z-index: 1000;
+    width: 80%;
+    max-width: 600px;
+}
+
+.alert {
+    padding: 15px;
+    margin-bottom: 20px;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    color: #fff;
+}
+
+.alert-error {
+    background-color: #f44336;
+}
+
+.alert .close {
+    float: right;
+    font-size: 21px;
+    font-weight: 700;
+    line-height: 1;
+    color: #000;
+    text-shadow: 0 1px 0 #fff;
+    opacity: 0.2;
+    cursor: pointer;
+    background: none;
+    border: none;
+    padding: 0;
+}
+
+.alert .close:hover {
+    opacity: 0.5;
 }
