--- a/templates/about.html
+++ b/templates/about.html
@@ -52,7 +52,7 @@
                     <a href="{% url 'profile' %}">
                         <img class="nav-profile" src="{% static 'images/no-profile.jpg' %}" alt="profile-pic">
                     </a>
-                    <p class="nav-name">First Name Last Name</p>
+                    <p class="nav-name">{{ name }}</p>
                     <a class="nav-links" href="{% url 'home' %}">Home</a>
                     <a class="active nav-links" href="{% url 'about' %}">About</a>
                     <button class="nav-links" type="button">Logout</button>
