--- a/templates/description.html
+++ b/templates/description.html
@@ -66,12 +66,15 @@
             <!-- Code Here -->
             <form class="desc-content">
             <div class="desc-image">
-                <img class="desc-pic" src="{% static 'images/homepage-pic.png' %}" alt="food picture">
+                <img class="desc-pic" src="{% static 'images/'|add:food.URL %}" alt="food picture">
             </div>
             <!-- <form class="desc-content"> -->
                 <h3 class="desc-subhead name">{{ food.Food_Name }}</h3>
-                <h3 class="desc-subhead price">{{ food.Price }}</h3>
+                <h3 class="desc-subhead price">Php {{ food.Price }}</h3>
+                <h3 class="desc-subhead price">Calories {{ food.Calories}}</h3>
                 <h4 class="desc-rating">Rating: {{ food.Rating }}</h4>
+                <h4 class="desc-rating">Rating: {{ food.Nutritional_Rating }}</h4>
+                <h4 class="desc-rating">Rating: {{ food.Overall_Rating }}</h4>
                 <h4>Serving Size: {{ food.Serving }}</h4>
                 <div class="desc-container">
                     <h4 class="desc-subhead">Ingredients</h4>
@@ -111,7 +114,7 @@
                     </ul>
                     {% endfor %}
                 </div>
-                <button class="desc-back" type="button">BACK</button>
+                <a class="desc-back" href="{% url 'home' %}">BACK</a>
             </form>
         </div>
     </div>
