--- a/static/home.css
+++ b/static/home.css
@@ -50,6 +50,10 @@
     .homepage-pic {
         width: 315px;
     }
+
+    .profile {
+        gap: none;
+    }
 }
 
 @media (min-width: 992px) { /* Desktop Navigation */
@@ -102,6 +106,10 @@
         object-position: 100% 0%;
         width: 40%;
     }
+
+    .profile {
+        gap: 30px;
+    }
 }
 
 .home-title {
@@ -130,4 +138,14 @@
 .home-btn:hover {
     background-color: #EBBA6B;
     color: white;
+}
+
+.nav-name {
+    font-weight: bold;
+}
+
+.profile {
+    align-items: center;
+    display: flex;
+    text-decoration: none;
 }
