--- a/templates/home.html
+++ b/templates/home.html
@@ -55,8 +55,8 @@
                 <a class="nav-links" href="{% url 'about' %}">About</a>
                 <a class="nav-links" href="{% url 'logout' %}">Logout</a>
                 <a class="profile" href="{% url 'profile' %}" target="_blank" rel="noopener noreferrer">
+                    <span class="profile-text nav-links">{{ name }}</span>
                     <img class="nav-profile" src="{% static 'images/no-profile.jpg' %}" alt="profile-pic">
-                    <span class="profile-text">{{ name }}</span>
                 </a>
             </div>
         </div>
