--- a/templates/profile.html
+++ b/templates/profile.html
@@ -72,21 +72,33 @@
                 </a>
             </div>
             <form class="pro-info">
-                    <label class="pro-label" for="pro-name">Name:</label>
+                    <label class="pro-label" for="pro-name">Full Name:</label>
                     <div class="pro-outline">
                         <input class="pro-input" type="name" name="pro-name" required>
                     </div>
                     <label class="pro-label" for="pro-email">Email:</label>
                     <div class="pro-outline">
-                    <input class="pro-input" type="email" name="pro-email" required>
+                        <input class="pro-input" type="email" name="pro-email" required>
                     </div>
-                    <label class="pro-label" for="pro-password">New Password:</label>
+                    <label class="pro-label" for="pro-age">Age:</label>
                     <div class="pro-outline">
-                    <input class="pro-input" type="password" name="pro-password" required>
+                        <input class="pro-input" type="age" name="pro-age" required>
                     </div>
-                    <label class="pro-label" for="pro-cpassword">Confirm Password:</label>
+                    <label class="pro-label" for="pro-height">Height (cm):</label>
                     <div class="pro-outline">
-                    <input class="pro-input" type="password" name="pro-cpassword" required>
+                        <input class="pro-input" type="height" name="pro-height" required>
+                    </div>
+                    <label class="pro-label" for="pro-weight">Weight (kg):</label>
+                    <div class="pro-outline">
+                        <input class="pro-input" type="weight" name="pro-weight" required>
+                    </div>
+                    <label class="pro-label" for="pro-bmi">BMI:</label>
+                    <div class="pro-outline">
+                        <input class="pro-input" type="bmi" name="pro-bmi" required>
+                    </div>
+                    <label class="pro-label" for="pro-calorie">Maintaining Calories:</label>
+                    <div class="pro-outline">
+                        <input class="pro-input" type="calorie" name="pro-calorie" required>
                     </div>
             </form>
             <div class="pro-button">
