--- a/templates/description.html
+++ b/templates/description.html
@@ -74,7 +74,7 @@
                     <div class="d-flex align-items-center" style="gap: 8px;">
                         <h2 class="manjari desc-price">₱ {{ food.Price }}.00</h2>
                         <div>
-                            <p class="manjari desc-calories">{{ food.Serving }} | {{ food.Calories }} Calories</p> 
+                            <p class="manjari desc-calories">{{ food.Serving }}&nbsp; | &nbsp;{{ food.Calories }} Calories</p> 
                         </div>
                     </div>
                     <div class="desc-ratings d-flex">
