--- a/static/global.css
+++ b/static/global.css
@@ -119,7 +119,9 @@
 .forgot-pass,
 .forgot-pass:hover,
 .form-btn,
-.form-btn:hover {
+.form-btn:hover,
+.combo-desc,
+.combo-desc:hover {
     transition: all 0.3s ease;
 }
 
