--- a/templates/base.html
+++ b/templates/base.html
@@ -52,7 +52,7 @@
                     <a href="/templates/profile.html">
                         <img class="nav-profile" src="{% static 'images/no-profile.jpg' %}" alt="profile-pic">
                     </a>
-                    <p class="nav-name">First Name Last Name</p>
+                    <p class="nav-name">{{ name }}</p>
                     <a class="nav-links" href="/templates/home.html">Home</a>
                     <a class="active nav-links" href="/templates/about.html">About</a>
                     <button class="nav-links" type="button">Logout</button>
