--- a/templates/form.html
+++ b/templates/form.html
@@ -32,6 +32,7 @@
                 <a class="nav-links" href="{% url 'about' %}">About</a>
                 <button class="nav-links" type="button">Logout</button>
                 <a href="{% url 'profile' %}" target="_blank" rel="noopener noreferrer">
+                    <span class="profile-text nav-links">{{ name }}</span>
                     <img class="nav-profile" src="{% static 'images/no-profile.jpg' %}" alt="profile-pic">
                 </a>
             </div>
@@ -52,7 +53,7 @@
                     <a href="{% url 'home' %}">
                         <img class="nav-profile" src="{% static 'images/no-profile.jpg' %}" alt="profile-pic">
                     </a>
-                    <p class="nav-name">First Name Last Name</p>
+                    <p class="nav-name">{{ name }}</p>
                     <a class="nav-links" href="{% url 'home' %}">Home</a>
                     <a class="nav-links" href="{% url 'about' %}">About</a>
                     <button class="nav-links" type="button">Logout</button>
