--- a/templates/form.html
+++ b/templates/form.html
@@ -67,7 +67,7 @@
             <form method="POST">
                 {% csrf_token %}
                 <label class="form-label" for="form-budget">Maximum Budget</label>
-                <input class="form-input" type="number" name="max-budget" min="0" placeholder="₱0.00" required>
+                <input class="form-input" type="number" name="max-budget" min="20" placeholder="₱0.00" required>
 
                 <div class="form-layout">
                     <div>
@@ -94,12 +94,16 @@
                                         <label class="label-radio" for="meal-type">Merienda</label>
                                     </div>
                                     <div class="d-flex">
-                                        <input class="form-radio" type="radio" name="meal-type" value="Snacks" required>
-                                        <label class="label-radio" for="meal-type">Snacks</label> 
+                                        <input class="form-radio" type="radio" name="meal-type" value="CheatSnacks" required>
+                                        <label class="label-radio" for="meal-type">Cheat Snacks</label> 
                                     </div>
                                     <div class="d-flex">
-                                        <input class="form-radio" type="radio" name="meal-type" value="Drinks" required>
-                                        <label class="label-radio" for="meal-type">Drinks</label>   
+                                        <input class="form-radio" type="radio" name="meal-type" value="FruitDrinks" required>
+                                        <label class="label-radio" for="meal-type">Fruit Drinks</label>   
+                                    </div>
+                                    <div class="d-flex">
+                                        <input class="form-radio" type="radio" name="meal-type" value="Beverages" required>
+                                        <label class="label-radio" for="meal-type">Beverages</label>   
                                     </div>
                                 </div>
                             </div>
